--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "pre-homeworks",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://DimaKokovin.github.io/homeworks-front",
+
+  "homepage": "https://dimakokovin.github.io/homeworks-front",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
